HelloUltraviolet/Fixtures/RejectedSource/Expressions/IntLiteralCheckRange/Expected.uv
//! Expected diagnostic metadata for the IntLiteralCheckRange rejected-source specimen.

expectedDiagnostic("E-SEM-3161", "rule.16.Chk-Int-Literal")
